# Phoenix-b

./: .gitignore  LICENSE  README.md  USERS_MANUAL.md  pyproject.toml  requirements.txt
src/phoenix/: __init__.py  exceptions.py
src/phoenix/api/: __init__.py  app.py
src/phoenix/api/routes/: config.py  devices.py  diagnostics.py  status.py
src/phoenix/cli/: __init__.py  main.py
src/phoenix/core/: __init__.py  device.py  discovery.py
src/phoenix/data/: __init__.py  bcm85667.json
src/phoenix/models/: __init__.py  configuration.py  device_info.py  diagnostics.py  status.py
src/phoenix/protocol/: __init__.py  chip_profile.py  enums.py  register_maps.py  smbus_commands.py
src/phoenix/transport/: __init__.py  base.py  i2c.py  uart.py
src/phoenix/ui/: __init__.py  layout.py  main.py  state.py  theme.py
src/phoenix/ui/components/: __init__.py  device_card.py  header.py  hex_display.py  lane_grid.py  port_status_card.py  register_field_view.py  sidebar.py  status_indicator.py  temperature_gauge.py  voltage_chart.py
src/phoenix/ui/pages/: __init__.py  configuration.py  dashboard.py  diagnostics.py  discovery.py  ports.py  registers.py
src/phoenix/utils/: __init__.py  crc.py  logging.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_chip_profile.py  test_crc.py  test_enums.py  test_register_maps.py
